tfc-badge/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: tfc-badge
  labels:
    name: tfc-badge
