tfc-badge/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tfc-badge
  namespace: tfc-badge
  labels:
    name: tfc-badge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tfc-badge
  template:
    metadata:
      labels:
        app: tfc-badge
    spec:
      containers:
      - name: tfc-badge
        # Based on https://github.com/ldb/tfc-badge
        image: cosmonawt/tfc-badge:latest
        ports:
          - containerPort: 3030
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
