tfc-badge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tfc-badge
  namespace: tfc-badge
spec:
  ports:
  - name: http
    protocol: TCP
    port: 3030
  selector:
    app: tfc-badge
