tfc-badge/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-tfc-badge
  namespace: tfc-badge
spec:
  rules:
  - host: tfc-badge.sam-app.ro
    http:
      paths:
        - backend:
            serviceName: tfc-badge
            servicePort: 3030
